Multiple fixes on track 3/4.
