# api/Features/Race/Insert/Request.cs
@@ -4,4 +4,5 @@ public class Request
 {
     public string Name { get; set; } = string.Empty;
     public List<int> Players { get; set; } = new();
+    public bool IsFirstTracks { get; set; } = true;
 }
